Implementacion de firebase

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-REACT_APP_AUTH0_DOMAIN=dev-z4fpbkolrwk8dihj.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=IQD6tJjpbSqtyBUBa6Ew2GOlrgiciEjb
-REACT_APP_AUTH0_AUDIENCE=https://big-bite-backend/
+VITE_APIKEY=AIzaSyBC8449nnCed0S3KNG1cXq-A7dI62yFV-M
+VITE_AUTHDOMAIN=bigbite-55224.firebaseapp.com
+VITE_PROJECTID=bigbite-55224
+VITE_STORAGEBUCKET=bigbite-55224.appspot.com
+VITE_MESSAGINGSENDERID=113801897542
+VITE_APPID=1:113801897542:web:94cd47fd3e3e70ac0c0c47
+  
+
+
