cambiosde dependencia para evitar virus maligno

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
-    "recharts": "^2.13.0",
-    "xlsx": "^0.18.5"
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
