--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.7.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
