--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.5",
     "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.7.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
