--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.13.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
