--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@mercadopago/sdk-react": "^0.0.19",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
