--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.7.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
